# Funding-Scrapper-v2

./: .env.local.example  .gitignore  CHANGELOG.md  CHANGELOG_ENHANCEMENTS.md  ENHANCEMENTS_README.md  IMPLEMENTATION_COMPLETE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-enhanced.txt  tsconfig.app.json  vite.config.ts
docs/: ENHANCEMENTS_SUMMARY.md  admin-workflow.md  architecture.md  database-schema.md  enhanced-architecture.md  enhanced-scraper-guide.md  matching-logic.md  notification-flow.md  scraper-pipeline.md  user-flows.md
scraper/: README.md  __init__.py  config.py  config_v2.py  crawler.py  hybrid.py  main.py  pipeline.py  schemas.py
scraper/adapters/: __init__.py  base.py  nefcorp.py  nyda.py  registry.py  sites.py
scraper/ai/: __init__.py  ai_enhancement copy.py  ai_enhancement.py  test.py
scraper/classifiers/: eligibility.py  funding_type.py  geography.py  industries.py  ownership_targets.py  repayment.py  use_of_funds.py
scraper/documents/: __init__.py  extractors.py  ocr.py
scraper/examples/: enhanced_scraper_demo.py  job_listings_schema.json  multi_country_config.json  real_estate_schema.json
scraper/fetchers/: browser_fetcher.py  http_fetcher.py
scraper/i18n/: __init__.py  detector.py  translator.py
scraper/models/: __init__.py  base.py  registry.py
scraper/parsers/: extractor_rules.py  generic_parser.py  normalization.py
scraper/recovery/: __init__.py  checkpoint.py  retry.py
scraper/resources/: certification_keywords.json  entity_type_keywords.json  (+8 more)
supabase/: config.toml
(+149 files in other folders)
